--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.21.1",
     "macro-css": "^1.0.5",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.35.2",
     "web-vitals": "^1.0.1"
   },
@@ -42,7 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-   
-  }
+  "devDependencies": {}
 }
