--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "json-server": "^0.16.3",
     "macro-css": "^1.0.5",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
@@ -24,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "npx json-server --watch public/db.json --port=3001"
+    "server": "node server.js",
+    "json-server": "json-server --watch public/db.json --port=3001"
   },
   "eslintConfig": {
     "extends": [
@@ -32,7 +34,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:3001",  
+  "proxy": "http://localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
